Fix overzealous scrolling tabs, and fix alignment of the team name

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1322,10 +1322,6 @@ label {
 .tabs {
   white-space: nowrap;
   overflow-x: auto;
-  margin-left: -@l;
-  margin-right: -@l;
-  padding-left: @l;
-  padding-right: @l;
   max-width: 100%;
   box-sizing: border-box;
 }
@@ -1341,10 +1337,6 @@ label {
 
 @media (max-width: @mobile-max-width) {
   .tabs {
-    margin-left: -@s;
-    margin-right: -@s;
-    padding-left: @s;
-    padding-right: @s;
     .type-s();
   }
 
